# oroclient

./: CMakeLists.txt  README.md  package.xml
src/: CMakeLists.txt
src/dummyTalker/: CMakeLists.txt  dummyTalker.cpp
src/oroclient/: CMakeLists.txt  doxyFile  oroclient.cpp
src/oroclient/lib/: CMakeLists.txt  mngCommand.cpp  mngCommand.h  msgParser.cpp  msgParser.h  utils.cpp  utils.h
